[package]
name = "rustypsx"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.48", features = ["derive"] }
egui = "0.26"
egui-wgpu = "0.26.0"
egui-winit = { version = "0.26", default-features = false, features = ["clipboard", "links", "wayland", "x11"] }
pixels = "0.15.0"
serde = { version = "1.0.226", features = ["derive"] }
serde_bytes = "0.11.19"
serde_json = "1.0.145"
winit = "0.29"
winit_input_helper = "0.16.0"
